# platformer

./: Cargo.toml  notes.md
assets/: example.ron  player.ron
notes/: brainstorming.md  jump-math.md
src/: main.rs
src/player/: control_params.rs  control_state.rs  loader.rs  mod.rs  system.rs
src/util/: mod.rs  side.rs  timers.rs  walls.rs
