[package]
name = "platformer"
version = "0.1.0"
edition = "2024"

# There are a few more "optimizations" that can be made to speed up development/iteration times.
# See https://bevyengine.org/learn/quick-start/getting-started/setup/ for all of them

[dependencies]
# note: `dynamic_linking` feature is only for development; releases should omit this so the executable can be standalone
bevy = { version = "0.15", features = ["dynamic_linking"] }
bevy_rapier2d = { version = "0.29.0", features = ["debug-render-2d"] }

# Enable max optimizations for dependencies, but not my code, per Bevy's advice
[profile.dev.package."*"]
opt-level = 3
